--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="bootstrap-4.2.1-dist\css\bootstrap.min.css">
   <title>Bootstrap Tutorial Sample Page</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+
+    <script src="bootstrap-4.2.1-dist\js\bootstrap.min.js"></script>
 </body>
 </html>
