index.html- update : Adding nav bar and styling

--- a/index.html
+++ b/index.html
@@ -1,13 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="bootstrap-4.2.1-dist\css\bootstrap.min.css">
-  <title>Bootstrap Tutorial Sample Page</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-<body>
+  <head>
+    <link rel="stylesheet" href="bootstrap-4.2.1-dist\css\bootstrap.min.css" />
+    <title>Bootstrap Tutorial Sample Page</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+  </head>
+  <body>
+    <nav
+      class="navbar navbar-expand-lg navbar-light bg-light fixed-top navbar-light"
+    >
+      <a class="navbar-brand" href="">Cyno Haven Labs</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarTogglerDemo01"
+        aria-controls="navbarTogglerDemo01"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="btn btn-outline-primary" href="">Services</a>
+          </li>
+          <li class="nav-item">
+            <a class="btn btn-outline-primary" href="">About Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="btn btn-outline-primary" href="">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a class="btn btn-outline-primary" href="">Blog</a>
+          </li>
+          <li class="nav-item">
+            <a class="btn btn-outline-primary" href="">Submit your design</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle btn btn-outline-primary"
+              href="#"
+              id="navbarDropdownMenuLink"
+              role="button"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
+              Learn More
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="#">Career Services</a>
+              <a class="dropdown-item" href="#">Case Studies</a>
+              <a class="dropdown-item" href="#">Recent Projects</a>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <h1>This is Cyno Haven Labs, the next generation web service provider</h1>
+
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js"
+      integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+      crossorigin="anonymous"
+    ></script>
     <script src="bootstrap-4.2.1-dist\js\bootstrap.min.js"></script>
-</body>
+  </body>
 </html>
